[package]
name = "slicewrap"
version = "0.1.0"
authors = ["Oliver Giersch"]
description = "A macro for generating newtype wrappers for unsized types."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oliver-giersch/slicewrap.git"
categories = ["macro", "newtype", "unsized"]
edition = "2024"

[features]
default = ["alloc"]
alloc = []
